--- a/src/components/Item/index.css
+++ b/src/components/Item/index.css
@@ -1,34 +1,41 @@
-li {
+.todo-main li {
   list-style: none;
   height: 36px;
   line-height: 36px;
   padding: 0 5px;
   border-bottom: 1px solid #ddd;
+  transition: all 0.5s;
 }
-
-li label {
-  
+/* .todo-main li:hover {
+  background-color: skyblue;
+} */
+/* .todo-main li:hover button {
+  opacity: 1;
+  transition: all 1s;
+} */
+.todo-main li label {
   float: left;
   cursor: pointer;
 }
 
-li label input {
+.todo-main li label input {
   vertical-align: middle;
   margin-right: 6px;
   position: relative;
   top: -1px;
 }
 
-li button {
+.todo-main li button {
   float: right;
-  display: none;
+
+  opacity: 0;
   margin-top: 3px;
 }
 
-li:before {
+.todo-main li:before {
   content: initial;
 }
 
-li:last-child {
+.todo-main li:last-child {
   border-bottom: none;
 }
